<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Song Generator</string>
    <string name="action_settings">Settings</string>
    
    <!-- UI strings -->
    <string name="generate_song">Generate</string>
    <string name="play_song">Play</string>
    <string name="stop_play">Stop</string>
    <string name="save_song">Export to MIDI</string>
    
    <string name="random_prompt">Random?</string>
    
    <string name="time_sig_prompt">TIME SIGNATURE</string>
    <string name="tempo_prompt">TEMPO</string>
    <string name="scale_prompt">SCALE</string>
    <string name="melody_ins_prompt">MELODY INSTRUMENT</string>
    <string name="chord_ins_prompt">CHORD INSTRUMENT</string>
    <string name="melody_ins_prompt_short">MELODY INST.</string>
    <string name="chord_ins_prompt_short">CHORD INST.</string>
    
    <string name="no_song_prompt">Generate a new song by pressing the \"Generate\" button. The chord progression will be displayed here.</string>
    
    <string name="about_option">About</string>
    <string name="about_header"><b>Song Generator Mobile</b>\nCopyright 2014 Bryan Lindsey\n</string>
    <string name="license_header"><b>Open source licenses:</b>\n</string>
    <string name="open_source_licenses">
        android-midi-lib\n<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>\n\n
        fluidsynth-android\n<a href="https://www.gnu.org/licenses/old-licenses/lgpl-2.0.html">GNU Library General Public License</a>\n\n
        GSON\n<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>\n\n
    </string>
    <string name="about_disclaimer">
        Songs generated by this app are computer generated, and any resemblance to any existing song is purely coincidental. Plus,
        most songs are just variations of other songs anyway, right?\n
    </string>
    
    <!-- error strings -->
    <string name="error_create_MIDI">Oops! Something bad happened trying to create a new MIDI file!</string>
    <string name="error_read_MIDI">Oops! Something bad happened trying to read your MIDI file!</string>
    
    <string name="temp_midi">tempOut.mid</string>

</resources>
