<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">
	    
		<TextView 
		    android:id="@+id/aboutHeader"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:layout_gravity="center" 
		    android:text="@string/about_header"/>
		
		<TextView 
		    android:id="@+id/licensesHeader"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center" 
		    android:text="@string/license_header"/>
		
		<TextView 
		    android:id="@+id/licensesText"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center" 
		    android:text="@string/open_source_licenses"/>
			
		<TextView 
		    android:id="@+id/disclaimerText"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center" 
		    android:text="@string/about_disclaimer"/>
	
	</LinearLayout>
	
</ScrollView>
