<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout android:id="@+id/mainLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <Button
	        android:id="@+id/songGen"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/generate_song" />
	    
	     <Button
	         android:id="@+id/songPlay"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_toRightOf="@id/songGen"
	         android:enabled="false"
	         android:text="@string/play_song" />
	     
	     <Button
	         android:id="@+id/songSave"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_toRightOf="@id/songPlay"
	         android:enabled="false"
	         android:text="@string/save_song" />
	     
	    <TextView
	        android:id="@+id/songStructure"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/songGen" />
     
     </RelativeLayout>

</ScrollView>
